--- a/grpcservice/pom.xml
+++ b/grpcservice/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>grpc-server-spring-boot-starter</artifactId>
             <version>2.13.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>proto</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
